# sndfile2k

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.md  annotated.html  annotated_dup.js  class_sndfile_handle.html  class_sndfile_handle.js  classes.html  deprecated.html  dir_05a45e9a086cfe3c6ff86a73dd30bae9.html  dir_1d7f3f8004dd7c8b1921a0aa18b7b613.html  dir_1d7f3f8004dd7c8b1921a0aa18b7b613.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__chunks.html  group__chunks.js  group__command.html  group__command.js  group__error.html  group__error.js  group__file-base.html  group__file-base.js  group__file-virt.html  (+37 more)
Octave/: format.h  sndfile.cc
cmake/: ClipMode.cmake  FindFLAC.cmake  FindOgg.cmake  FindSQLite3.cmake  FindSpeex.cmake  FindVorbis.cmake  FindWinMM.cmake  SndFile2KConfig.in.cmake  SndFileChecks.cmake  TestInline.cmake  TestLargeFiles.cmake
docs/: CMakeLists.txt  INDEX.md  embedded_files.md
examples/: CMakeLists.txt  generate.c  generate.cs  list_formats.c  make_sine.cpp  sfprocess.cpp  sndfile-loopify.c  sndfile-loopify.cpp  sndfile-to-text.cpp  sndfilehandle.cc  sndfilehandle.cpp
include/sndfile2k/: sndfile2k.h  sndfile2k.hh  sndfile2k.hpp
programs/: CMakeLists.txt  common.c  common.cpp  common.h  sndfile-cmp.c  sndfile-cmp.cpp  sndfile-concat.c  sndfile-concat.cpp  sndfile-convert.c  sndfile-convert.cpp  sndfile-deinterleave.c  sndfile-deinterleave.cpp  sndfile-info.c  sndfile-info.cpp  sndfile-interleave.c  sndfile-interleave.cpp  sndfile-metadata-get.c  sndfile-metadata-get.cpp  sndfile-metadata-set.c  sndfile-metadata-set.cpp  sndfile-play-beos.cpp  sndfile-play.c  sndfile-play.cpp  sndfile-salvage.c  sndfile-salvage.cpp
regtest/: checksum.c  database.c  regtest.h  sndfile-regtest.c
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  groups_0.js  groups_1.js  groups_3.js  groups_4.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+7 more)
src/: CMakeLists.txt  aiff.c  aiff.cpp  alac.c  alac.cpp  alaw.c  alaw.cpp  au.c  au.cpp  audio_detect.c  audio_detect.cpp  avr.c  avr.cpp  broadcast.c  caf.c  caf.cpp  cart.c  chanmap.c  chanmap.h  chunk.c  chunk.cpp  command.c  command.cpp  common.c  common.cpp  common.h  config.h.cmake  dither.c  dither.cpp  double64.c  double64.cpp  dwd.c  dwd.cpp  dwvw.c  dwvw.cpp  file_io.c  file_io.cpp  file_io_win32.cpp  flac.c  flac.cpp  (+118 more)
src/ALAC/: ALACAudioTypes.h  ALACBitUtilities.c  ALACBitUtilities.h  ALACDecoder.h  ALACEncoder.h  EndianPortable.h  ag_dec.c  ag_enc.c  aglib.h  alac_codec.h  alac_decoder.c  alac_decoder.h  alac_encoder.c  dp_dec.c  dp_enc.c  dplib.h  matrix_dec.c  matrix_enc.c  matrixlib.h  shift.h
src/G72x/: g721.c  g723_16.c  g723_24.c  g723_40.c  g72x.c  g72x.h  g72x_priv.h  g72x_test.c
src/GSM610/: add.c  code.c  config.h  decode.c  gsm.h  gsm610_priv.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
src/file_io/: posix_io.c  win32_io.c
tests/: CMakeLists.txt  aiff_rw_test.c  aiff_rw_test.cpp  alaw_test.c  alaw_test.cpp  benchmark.c  benchmark.cpp  channel_test.c  channel_test.cpp  checksum_test.c  checksum_test.cpp  chunk_test.c  chunk_test.cpp  command_test.c  command_test.cpp  compression_size_test.c  compression_size_test.cpp  cpp_test.cc  dft_cmp.c  dft_cmp.h  dither_test.c  dither_test.cpp  dwvw_test.c  dwvw_test.cpp  error_test.c  error_test.cpp  external_libs_test.c  external_libs_test.cpp  fix_this.c  fix_this.cpp  floating_point_test.c  floating_point_test.cpp  format_check_test.c  format_check_test.cpp  generate.c  generate.cpp  generate.h  header_test.c  header_test.cpp  headerless_test.c  (+48 more)
